# oxystat-in-vivo-device-publication

./: LICENSE  app.c  app.h  blink.c  blink.h  channels.h  flexiBLE.json  flexiBLE_common.c  flexiBLE_common.h  max5535.c  max5535.h  oxyconfig.c  oxyconfig.h  oxystat.c  oxystat.h  oxystat_quad.pintool  oxystat_quad.slcp  oxystat_quad.slps  oxystat_service.c  oxystat_service.h  readme.md  utilities.c  utilities.h  version.h  vscode.conf
autogen/: gatt_db.c  gatt_db.h  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_i2cspm_init.c  sl_i2cspm_instances.h  sl_simple_led_instances.c  sl_simple_led_instances.h  sl_spidrv_init.c  sl_spidrv_instances.h
bootloader/: bootloader-storage-internal-ble-combined.s37
config/: app_log_config.h  pin_config.h  sl_i2cspm_inst_config.h  sl_simple_led_debug_led_config.h  sl_spidrv_dac_config.h
config/btconf/: gatt_configuration.btconf
documentation/: oxystat_event_flow.puml
oxystat_quad_cmake/: CMakeLists.txt  CMakePresets.json
